--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <!-- in the hmtl you attach the files that are made by webpack, and these are the ones sent to production/delivered to client -->
-  <script src="dist/bundle.js"></script>
+  <script src="css-loader/dist/js/home.js"></script>
 </body>
 </html>
