--- a/react/index.html
+++ b/react/index.html
@@ -6,6 +6,7 @@
   <title>Hello, hello baby, you call? I can't hear a thing.</title>
 </head>
 <body>
+  <section id="container"> </section>
   <!-- in the hmtl you attach the files that are made by webpack, and these are the ones sent to production/delivered to client -->
   <!-- <script src="css-loader/dist/js/home.js"></script> -->
 </body>
